# ssis-audio-pipeline

./: .gitignore  .gitignore_global  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: ssis-auditor.md  ssis-producer.md  ssis-resilience-tester.md  ssis-verifier.md
.github/workflows/: ci-ml.yml  ci.yml
app/: __init__.py  config.py  db.py  huey_app.py  models.py  orchestrator.py  schemas.py
app/utils/: __init__.py  atomic_io.py  audio_meta.py  checkpoints.py  failpoints.py  hashing.py  paths.py
docs/: RUNBOOK.md  mvp_acceptance.md
scripts/: fetch_yamnet_onnx.py
services/ingest_api/: __init__.py  main.py  service.py
services/worker_decode/: __init__.py  run.py
services/worker_features/: __init__.py  run.py
services/worker_features/yamnet_onnx/: .gitkeep  yamnet.onnx.sha256
services/worker_preview/: __init__.py  run.py
services/worker_segments/: __init__.py  run.py
specs/: feature_pack.schema.json  ingest_local_request.schema.json  pipeline_job.schema.json  preview_candidate.schema.json  preview_feedback.schema.json  segments.schema.json
tests/: __init__.py  conftest.py  test_all_schemas_parse.py  test_atomic_copy_fs.py  test_atomic_io.py  test_checkpoints.py  test_contract_invariants.py  test_db.py  test_fetch_yamnet_onnx.py  test_hashing.py  test_ingest_api.py  test_ingest_idempotency.py  test_mvp_acceptance.py  test_numpy_compat_segments.py  test_orchestrator_dispatch.py  test_orchestrator_idempotency.py  test_paths.py  test_resilience_harness.py  test_retry_and_dead_letter.py  test_smoke.py  test_startup_tmp_cleanup.py  test_worker_decode.py  test_worker_features.py  test_worker_preview.py  test_worker_segments.py
