[project]
name = "ssis-audio-pipeline"
version = "0.1.0"
description = "SSIS Audio Pipeline - Blueprint #1: Multi-stage audio processing pipeline for streaming segmentation"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "fastapi>=0.109,<1",
    "python-multipart>=0.0.6,<1",
    "pydantic>=2.5,<3",
    "uvicorn>=0.24,<1",
    "huey>=2.5,<3",
    "tensorflow==2.15.1",
    "keras==2.15.0",
    "protobuf<5",
    "ml-dtypes~=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "jsonschema>=4.20.0",
    "httpx>=0.25.0",
    "h5py>=3.10.0",
    "numpy>=1.26.0",
]
features-ml = [
    "onnxruntime>=1.17.0,<2",
    "librosa>=0.10.0,<0.11",
    "h5py>=3.10.0,<4",
    "numpy>=1.26.0,<2",
]
segments-ml = [
    "inaSpeechSegmenter>=0.6.0,<0.7",
]
ml = [
    "onnxruntime>=1.17.0,<2",
    "librosa>=0.10.0,<0.11",
    "h5py>=3.10.0,<4",
    "numpy>=1.26.0,<2",
    "inaSpeechSegmenter>=0.6.0,<0.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "services*"]
exclude = ["tests*", "data*", "logs*", "specs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "services", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
